Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-8840

Regression in display of file tree for "nested" projects

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • Qt Creator 2.7.0
    • Qt Creator 2.7.0-beta
    • None
    • Ubuntu 10.04

    Description

      OK, I know that this isn't exactly a supported use-case, but it used to be OK, and now it has gotten worse.

      I've attached a screenshot that shows the project-file tree for the attached test-case project.

      Our usage of generic projects is in a legacy source tree with projects nested deeply in the root as sibling of library sources. In previous versions of Qt Creator (<=2.6.x), the file tree was a bit annoying, in that it showed parent directories of the project as ".." instead of their names, but that was OK. This behavior is shown in the attachment "2013-02-26-test-QtCreator-2.6.x.png".

      You can see that the behavior has changed in 2.7.x in the attachment "2013-02-26-test-QtCreator-2.7.x.png". It now shows some files in sibling directories in bizarre unnamed folders, separate from the folder in which they actually reside.

      This has me wondering how hard it would be to make Qt Creator do what I actually want it to - display the named parent & sibling folders. I might actually have the energy for this, since it's more annoying now, if I could get some pointers as to where to start...

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            dt Daniel Teske
            bryceman Bryce Schober
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes