Generic Project: Fix relative paths outside of project directory

The paths are later split on '/' and thus should not end in '/'.

Task-number: QTCREATORBUG-8840

Change-Id: I3fb1ddd53bb1e33123e20f683c481d56ad651d62
Reviewed-by: Tobias Hunger <tobias.hunger@digia.com>
Reviewed-by: Thorbjørn Lindeijer <bjorn@lindeijer.nl>